@@ -23,9 +23,11 @@ are described in section \ref{sec:tutDetailedAPI}.
 \label{sec:tutfile}
 
 To create and link a driver code, the Mesquite library must be
-compiled per the instructions of section \ref{sec:compiling}. 
-This tutorial begins with the file \newline
-\texttt{testSuite/tutorial/tutorial.cpp}, 
+installed per the instructions of section \ref{sec:compiling}. 
+This commands and file names specified in this section are relative 
+to the installed \texttt{share/doc/mesquite/examples} directory.  It 
+is assumed that that is the working diretory.
+This tutorial begins with the file \texttt{tutorial.cpp}, 
 which contains the following template:
 \begin{verbatim}
 1.  #include "Mesquite_all_headers.hpp"
@@ -42,6 +44,8 @@ which contains the following template:
 
       // new code starts here
 4.    //... 
+
+      return 0;
     }
 \end{verbatim}
 The lines labeled 1-3 highlight three basic aspects of using Mesquite;
@@ -54,10 +58,10 @@ it may slow down compilation of the application.
 
 \item  The \texttt{MsqError} class defines an object type used to communicate
 Mesquite errors to the application.  The calling application must pass
-an instance of the \tt{MsqError} class or an instance of a subclass of
-\tt{MsqError} to many Mesquite functions.  The state of the error object
+an instance of the \texttt{MsqError} class or an instance of a subclass of
+\texttt{MsqError} to many Mesquite functions.  The state of the error object
 may be checked by casting the instance ot a Boolean or using it in a 
-Boolean context.  The state is cleared by calling the \tt{clear} method.
+Boolean context.  The state is cleared by calling the \texttt{clear} method.
 \item In the sections that follow, we guide the user through the steps
 necessary to smooth a mesh using Mesquite.  All new lines of code to be
 added to the template file start in this position and are added in the order
@@ -65,10 +69,10 @@ in which they are discussed.
 \end{enumerate}
 
 The code above takes a mesh file name as a command line argument and
-performs no action. We can compile it from the {\it main directory}
-(\texttt{mesquite/}) with the command 
+performs no action. We can compile it in the 
+(\texttt{examples/}) directory with the command:
 \begin{verbatim}
-make testSuite/tutorial/tutorial
+make -f tutorial.make
 \end{verbatim}
 
 \subsection{Loading a Test Mesh}
@@ -243,7 +247,7 @@ the details of each class and the low-level API are not described here.
   FeasibleNewton f_newton(&obj_func);
 
     //performs optimization globally
-  f_newton.ues_global_patch(); 
+  f_newton.use_global_patch(); 
 
     // creates a termination criterion and 
     // add it to the optimization procedure
