@@ -4,6 +4,20 @@ BUILT_SOURCES += itaps/iMesh_protos.h \
 
 EXTRA_DIST += $(top_srcdir)/itaps/mkprotos.sh
 
+ITAPS_DIR = itaps
+MSQ_INCLUDES += -I$(top_srcdir)/$(ITAPS_DIR)
+INCLUDED_MAKEFILES += $(ITAPS_DIR)/Makefile.am
+
+MSQ_HDRS += \
+	$(ITAPS_DIR)/iBase.h \
+	$(ITAPS_DIR)/iBase_FCDefs.h \
+	$(ITAPS_DIR)/iMesh.h \
+	$(ITAPS_DIR)/iMesh_protos.h \
+	$(ITAPS_DIR)/iGeom.h \
+	$(ITAPS_DIR)/iGeom_protos.h \
+	$(ITAPS_DIR)/iRel.h \
+	$(ITAPS_DIR)/iRel_protos.h 
+
 itaps/iMesh_protos.h: itaps/iMesh.h
 	$(top_srcdir)/itaps/mkprotos.sh iMesh $< $@
 
@@ -12,3 +26,5 @@ itaps/iGeom_protos.h: itaps/iGeom.h
 
 itaps/iRel_protos.h: itaps/iRel.h
 	$(top_srcdir)/itaps/mkprotos.sh iRel $< $@
+
+
