@@ -1,0 +1,14 @@
+#!/bin/sh
+
+meshfiles=`grep define ../meshfiles.h | cut -f 2 -d\"`
+
+if ! ./wrapper ${meshfiles}/2D/VTK/square_quad_10_rand.vtk; then
+  echo "ERROR: tutorial/wrapper failed"
+  exit 1
+fi
+
+if ! ./lowlevel ${meshfiles}/2D/VTK/hole_in_square.vtk; then
+  echo "ERROR: tutorial/lowlevel failed"
+  exit 1
+fi
+
